# k8s-resource-checker

./: .pre-commit-config.yaml  Dockerfile  README.md  flake.nix  pyproject.toml
checker/: main.py
