[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "k8s-resource-checker"
version = "0.0.0"
description = "K8s resource allocation monitoring tool"
authors = ["Murat Can Üste <mcanueste@gmail.com>"]
readme = "README.md"
packages = [
    { include = 'checker/' },
]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
kubernetes = "^28.1.0"
pandas = "2.0.3"
tabulate = "^0.9.0"
rich = "^13.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[tool.poetry.scripts]
monitor = "checker.main:main"
